chore: build.gradle 및 application.yml 설정